Fix padding+margin to make gang images align better

--- a/assets/CSS/styling.css
+++ b/assets/CSS/styling.css
@@ -350,11 +350,14 @@ footer {
     
     .thegang-left img{
         border-radius: 50%;
+        margin-left: 15px;
+        padding-right: 15px;
     }
     
     .thegang-right img{
         position: absolute;
         right: 0;
+        margin-top: 40px;
         margin-right: 15px;
         border-radius: 50%;
     }
@@ -363,10 +366,17 @@ footer {
     }
     .thegang-right article {
         text-align: right;
+        
         padding: 40px 260px 40px 0
     }
+
+    .thegang-left article {
+        
+
+    }
+
     .thegang-left  {
-        padding-top: 40px;
+        padding: 55px 0px 40px 0;
         padding-left: 10px;
         text-align: left;   
     }
@@ -400,4 +410,12 @@ footer {
     }
     .thegang-left {
         padding-right: 50px;}
+
+    .thegang-right article {
+        margin-top: 45px;
+    }
+    
+    .thegang-left article {
+        margin-top: 45px;
+    }
 }
